Fix overflow de flexbox

--- a/src/app/pages/mi-perfil/mi-perfil.component.scss
+++ b/src/app/pages/mi-perfil/mi-perfil.component.scss
@@ -1,8 +1,12 @@
 div#mi_perfil_container {
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     justify-content: flex-start;
     height: 100%;
     gap: 0.5rem;
+
+    div#mis_horarios_container{
+        height: 100%;
+    }
 }
